# PICASO

./: .gitattributes  .gitignore  PICASO_Defense_Domain.ipynb  README.md  Wikidata_Defense_Extraction.ipynb  Wikipedia_Text_Extraction.ipynb  pyproject.toml
Defense Dataset/Wikidata_output/: SUMMARY.txt  defence_entities.csv  defence_entities.json  entity_relations.json  entity_subgraphs.json  entity_subgraphs_sample.json
Defense Dataset/wikipedia_extraction_output/: EXTRACTION_SUMMARY.txt  defence_entities_enriched.csv  extraction_report.json  wikipedia_all_entities.json
docs/: index.html
examples/: quickstart.py
examples/defense_domain/: evaluate_defense.py  train_defense.py
picaso/: __init__.py  config.py  data.py  embeddings.py  evaluator.py  loss.py  model.py  relations.py  trainer.py  utils.py
